--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,21 @@ cache:
     - .m2/repository
   policy: pull-push
 
+# Reusable YAML anchors
+.default_rules: &default_rules
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "push"'
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+
+.version_check: &version_check
+  - echo "Using Java version: $(java -version 2>&1 | head -n 1)"
+  - echo "Using Maven version: $(mvn -v | head -n 1)"
+
+.artifacts_config: &artifacts_config
+  artifacts:
+    when: always
+    expire_in: 1 week
+
 stages:          # List of stages for jobs, and their order of execution
   - build
   - test
@@ -18,38 +33,30 @@ stages:          # List of stages for jobs, and their order of execution
 maven:build:
   stage: build
   script:
-    - echo "Using Java version: $(java -version 2>&1 | head -n 1)"
-    - echo "Using Maven version: $(mvn -v | head -n 1)"
+    - *version_check
     - echo "Building application - skipping tests..."
     - mvn $MAVEN_CLI_OPTS $MAVEN_OPTS clean install -DskipTests
+  <<: *artifacts_config
   artifacts:
-    when: always
     paths:
       - target/**
       - .m2/repository/**
-    expire_in: 1 week
-  rules:
-    - if: '$CI_PIPELINE_SOURCE == "push"'
-    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+  <<: *default_rules
 
 maven:test:
   stage: test
   needs: ["maven:build"]
   script:
-    - echo "Using Java version: $(java -version 2>&1 | head -n 1)"
-    - echo "Using Maven version: $(mvn -v | head -n 1)"
+    - *version_check
     - echo "Running BVT tests..."
     - mvn $MAVEN_CLI_OPTS $MAVEN_OPTS clean test -DsuiteXmlFile=test-suites/testng-bvt.xml
+  <<: *artifacts_config
   artifacts:
-    when: always
     paths:
       - target/surefire-reports/**
       - test-output/**
       - allure-results/**
-    expire_in: 1 week
-  rules:
-    - if: '$CI_PIPELINE_SOURCE == "push"'
-    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+  <<: *default_rules
 
 maven:deploy:
   stage: deploy
@@ -57,6 +64,5 @@ maven:deploy:
   script:
     - echo "Deploying application..."
     - echo "Application successfully deployed."
-  rules:
-    - if: '$CI_PIPELINE_SOURCE == "push"'
-    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+  <<: *default_rules
+
