--- a/.github/workflows/java-build.yml
+++ b/.github/workflows/java-build.yml
@@ -1,19 +1,29 @@
-name: Java Build and Test Pipeline
+name: Java CI/CD Pipeline
 
 on:
   push:
     branches: [ main, develop ]
   pull_request:
     branches: [ main, develop ]
+  workflow_dispatch:
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
-    name: Build and Test
+    name: Build and Test with Java 21
+    
+    permissions:
+      contents: write
+      pages: write
+      id-token: write
+      checks: write
+      pull-requests: write
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
 
     - name: Set up JDK 21
       uses: actions/setup-java@v4
@@ -22,11 +32,19 @@ jobs:
         distribution: 'temurin'
         cache: maven
 
-    - name: Build with Maven
-      run: mvn clean compile -B
+    - name: Cache Maven dependencies
+      uses: actions/cache@v4
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
 
-    - name: Run tests
-      run: mvn test -B
+    - name: Build with Maven
+      run: mvn clean compile -B -V
+
+    - name: Run tests with TestNG
+      run: mvn test -B -DsuiteXmlFile=test-suites/testng.xml
       continue-on-error: true
 
     - name: Publish test results
@@ -37,38 +55,67 @@ jobs:
           target/surefire-reports/**/*.xml
           target/failsafe-reports/**/*.xml
         check_name: Test Results
-        comment_title: Test Report
+        comment_title: 📊 Test Report
+        comment_mode: update last
+        compare_to_earlier_commit: true
 
     - name: Upload test reports
       if: always()
       uses: actions/upload-artifact@v4
       with:
-        name: test-reports
+        name: test-reports-${{ github.run_number }}
         path: |
           target/surefire-reports/
           test-output/
+          allure-results/
         retention-days: 30
+        if-no-files-found: warn
+
+    - name: Get Allure history
+      if: always()
+      uses: actions/checkout@v4
+      with:
+        ref: gh-pages
+        path: gh-pages
+      continue-on-error: true
 
     - name: Generate Allure report
       if: always()
-      uses: simple-elf/allure-report-action@master
+      uses: simple-elf/allure-report-action@v1.7
       with:
         allure_results: allure-results
         allure_history: allure-history
         keep_reports: 20
 
-    - name: Deploy Allure report to Github Pages
+    - name: Deploy Allure report to GitHub Pages
       if: always()
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: allure-report
+        publish_branch: gh-pages
+        publish_dir: allure-history
         destination_dir: allure/${{ github.ref_name }}
+        user_name: 'github-actions[bot]'
+        user_email: 'github-actions[bot]@users.noreply.github.com'
 
     - name: Upload build artifacts
       if: always()
       uses: actions/upload-artifact@v4
       with:
-        name: build-artifacts
+        name: build-artifacts-${{ github.run_number }}
         path: target/*.jar
         retention-days: 7
+        if-no-files-found: warn
+
+    - name: Comment PR with Allure report link
+      if: always() && github.event_name == 'pull_request'
+      uses: actions/github-script@v7
+      with:
+        script: |
+          const reportUrl = `https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/allure/${{ github.ref_name }}/`;
+          github.rest.issues.createComment({
+            issue_number: context.issue.number,
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            body: `## 📊 Allure Test Report\n\n✅ View the detailed test report here: [Allure Report](${reportUrl})\n\n*Report generated for commit: ${context.sha.substring(0, 7)}*`
+          });
