--- a/.github/workflows/java-build.yml
+++ b/.github/workflows/java-build.yml
@@ -44,20 +44,23 @@ jobs:
       run: mvn clean compile -B -V
 
     - name: Run tests with TestNG
-      run: mvn test -B -DsuiteXmlFile=test-suites/testng.xml
+      run: |
+        if [ -f "test-suites/testng.xml" ]; then
+          mvn test -B -DsuiteXmlFile=test-suites/testng.xml
+        else
+          mvn test -B
+        fi
       continue-on-error: true
 
-    - name: Publish test results
+    - name: Test Report Summary
       if: always()
-      uses: EnricoMi/publish-unit-test-result-action@v2
-      with:
-        files: |
-          target/surefire-reports/**/*.xml
-          target/failsafe-reports/**/*.xml
-        check_name: Test Results
-        comment_title: 📊 Test Report
-        comment_mode: update last
-        compare_to_earlier_commit: true
+      run: |
+        echo "## Test Results" >> $GITHUB_STEP_SUMMARY
+        if [ -f "target/surefire-reports/testng-results.xml" ]; then
+          echo "✅ Test execution completed" >> $GITHUB_STEP_SUMMARY
+        else
+          echo "⚠️ No test results found" >> $GITHUB_STEP_SUMMARY
+        fi
 
     - name: Upload test reports
       if: always()
@@ -79,24 +82,29 @@ jobs:
         path: gh-pages
       continue-on-error: true
 
-    - name: Generate Allure report
+    - name: Generate Allure Report
       if: always()
-      uses: simple-elf/allure-report-action@v1.7
-      with:
-        allure_results: allure-results
-        allure_history: allure-history
-        keep_reports: 20
+      run: |
+        # Install Allure
+        wget -q https://github.com/allure-framework/allure2/releases/download/2.25.0/allure-2.25.0.tgz
+        tar -zxvf allure-2.25.0.tgz -C /opt/
+        sudo ln -s /opt/allure-2.25.0/bin/allure /usr/bin/allure
+        
+        # Generate report
+        allure generate allure-results --clean -o allure-report
+      continue-on-error: true
 
     - name: Deploy Allure report to GitHub Pages
-      if: always()
+      if: always() && github.event_name == 'push'
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_branch: gh-pages
-        publish_dir: allure-history
+        publish_dir: allure-report
         destination_dir: allure/${{ github.ref_name }}
         user_name: 'github-actions[bot]'
         user_email: 'github-actions[bot]@users.noreply.github.com'
+      continue-on-error: true
 
     - name: Upload build artifacts
       if: always()
