--- a/.github/workflows/java-build.yml
+++ b/.github/workflows/java-build.yml
@@ -11,11 +11,12 @@ jobs:
   build-and-test:
     runs-on: ubuntu-latest
     name: Build and Test with Java 21
+    env:
+      ALLURE_VERSION: '2.25.0'
     
     permissions:
       contents: write
       pages: write
-      id-token: write
       checks: write
       pull-requests: write
 
@@ -32,16 +33,8 @@ jobs:
         distribution: 'temurin'
         cache: maven
 
-    - name: Cache Maven dependencies
-      uses: actions/cache@v4
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
-
     - name: Build with Maven
-      run: mvn clean compile -B -V
+      run: mvn clean compile -B -X
 
     - name: Run tests with TestNG
       run: |
@@ -82,16 +75,31 @@ jobs:
         path: gh-pages
       continue-on-error: true
 
+    - name: Prepare Allure history
+      if: always()
+      run: |
+        if [ -d "gh-pages/allure/${{ github.ref_name }}/history" ]; then
+          mkdir -p allure-results/history
+          cp -r gh-pages/allure/${{ github.ref_name }}/history allure-results/history
+        fi
+      continue-on-error: true
+
     - name: Generate Allure Report
       if: always()
       run: |
         # Install Allure
-        wget -q https://github.com/allure-framework/allure2/releases/download/2.25.0/allure-2.25.0.tgz
-        tar -zxvf allure-2.25.0.tgz -C /opt/
-        sudo ln -s /opt/allure-2.25.0/bin/allure /usr/bin/allure
+        wget -q https://github.com/allure-framework/allure2/releases/download/${ALLURE_VERSION}/allure-${ALLURE_VERSION}.tgz
+        tar -zxf allure-${ALLURE_VERSION}.tgz -C /opt/
+        sudo ln -s /opt/allure-${ALLURE_VERSION}/bin/allure /usr/bin/allure
         
-        # Generate report
-        allure generate allure-results --clean -o allure-report
+        # Generate report only if allure-results exists and is not empty
+        if [ -d "allure-results" ] && [ "$(ls -A allure-results)" ]; then
+          echo "Allure results found. Generating report..."
+          allure generate allure-results --clean -o allure-report
+        else
+          echo "No Allure results found. Skipping report generation."
+          mkdir -p allure-report
+        fi
       continue-on-error: true
 
     - name: Deploy Allure report to GitHub Pages
@@ -115,15 +123,8 @@ jobs:
         retention-days: 7
         if-no-files-found: warn
 
-    - name: Comment PR with Allure report link
-      if: always() && github.event_name == 'pull_request'
-      uses: actions/github-script@v7
-      with:
-        script: |
-          const reportUrl = `https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/allure/${{ github.ref_name }}/`;
-          github.rest.issues.createComment({
-            issue_number: context.issue.number,
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            body: `## 📊 Allure Test Report\n\n✅ View the detailed test report here: [Allure Report](${reportUrl})\n\n*Report generated for commit: ${context.sha.substring(0, 7)}*`
-          });
+    - name: PR report note
+      if: github.event_name == 'pull_request'
+      run: |
+        echo "### Allure report publishing" >> $GITHUB_STEP_SUMMARY
+        echo "Report deployment to GitHub Pages runs on 'push'. For PRs, download the 'allure-results' artifact and run 'allure serve' locally to view the report." >> $GITHUB_STEP_SUMMARY
