--- a/.github/workflows/java-build.yml
+++ b/.github/workflows/java-build.yml
@@ -115,6 +115,18 @@ jobs:
         user_email: 'github-actions[bot]@users.noreply.github.com'
       continue-on-error: true
 
+    - name: Deploy Allure report preview (PRs)
+      if: always() && github.event_name == 'pull_request'
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_branch: gh-pages
+        publish_dir: allure-report
+        destination_dir: allure/pr/${{ github.event.pull_request.number }}
+        user_name: 'github-actions[bot]'
+        user_email: 'github-actions[bot]@users.noreply.github.com'
+      continue-on-error: true
+
     - name: Upload build artifacts
       if: always()
       uses: actions/upload-artifact@v4
@@ -124,8 +136,24 @@ jobs:
         retention-days: 7
         if-no-files-found: warn
 
-    - name: PR report note
-      if: github.event_name == 'pull_request'
-      run: |
-        echo "### Allure report publishing" >> $GITHUB_STEP_SUMMARY
-        echo "Report deployment to GitHub Pages runs on 'push'. For PRs, download the 'allure-results' artifact and run 'allure serve' locally to view the report." >> $GITHUB_STEP_SUMMARY
+    - name: Comment PR with preview and artifacts
+      if: always() && github.event_name == 'pull_request'
+      uses: actions/github-script@v7
+      with:
+        script: |
+          const previewUrl = `https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/allure/pr/${{ github.event.pull_request.number }}/`;
+          const runUrl = `${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}`;
+          const body = `## 📊 Allure Test Report (PR Preview)\n\n` +
+            `Preview: [View Report](${previewUrl})\n\n` +
+            `Run artifacts (download allure-results): [Workflow Run](${runUrl})\n\n` +
+            `*Report generated for commit: ${context.sha.substring(0, 7)}*`;
+          try {
+            await github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body
+            });
+          } catch (e) {
+            core.warning(`Failed to comment PR: ${e}`);
+          }
