--- a/.github/workflows/auto-pr-develop-to-main.yml
+++ b/.github/workflows/auto-pr-develop-to-main.yml
@@ -41,12 +41,10 @@ jobs:
           
           if [ -z "$EXISTING_PR" ]; then
             echo "📝 No existing PR found. Creating new PR from develop→main..."
-            gh pr create \
-              --base main \
-              --head develop \
-              --title "chore: merge develop into main" \
-              --body "## 🔄 Automated PR from \`develop\` to \`main\`
-              
+            
+            # Create PR body as a variable to avoid shell escaping issues
+            PR_BODY="## 🔄 Automated PR from \`develop\` to \`main\`
+
 This PR was automatically created by the Auto PR workflow whenever code is pushed to the \`develop\` branch.
 
 ### Pre-merge checklist:
@@ -55,7 +53,13 @@ This PR was automatically created by the Auto PR workflow whenever code is pushe
 - [ ] 📖 Documentation is updated
 - [ ] 🔍 Code review completed
 - [ ] 🐛 No breaking changes
-- [ ] 🚀 Ready for production" \
+- [ ] 🚀 Ready for production"
+            
+            gh pr create \
+              --base main \
+              --head develop \
+              --title "chore: merge develop into main" \
+              --body "$PR_BODY" \
               --label "automated" || echo "⚠️ PR creation returned error (may already exist)"
             echo "✅ PR creation attempt completed"
           else
