fix: remove Unicode arrow character from YAML
- Replace arrow (→) with ASCII 'to' in echo message and PR body
- YAML is strict about certain Unicode characters
- Simplify text to avoid escaping issues
- Should resolve syntax error on line 48

--- a/.github/workflows/auto-pr-develop-to-main.yml
+++ b/.github/workflows/auto-pr-develop-to-main.yml
@@ -40,10 +40,10 @@ jobs:
           echo "Existing PR check result: '$EXISTING_PR'"
           
           if [ -z "$EXISTING_PR" ]; then
-            echo "📝 No existing PR found. Creating new PR from develop→main..."
+            echo "📝 No existing PR found. Creating new PR from develop to main..."
             
             # Create PR body as a variable to avoid shell escaping issues
-            PR_BODY="## 🔄 Automated PR from \`develop\` to \`main\`
+            PR_BODY="## 🔄 Automated PR from develop to main
 
 This PR was automatically created by the Auto PR workflow whenever code is pushed to the \`develop\` branch.
 
